[project]
name = "hpx"
dependencies = [
    "numpy>=1.23, <2",
]
requires-python = ">=3.9"
version = "0.0.1"

[build-system]
build-backend = 'mesonpy'
requires = [
    "meson-python",
    "numpy>=2.0.0rc1",
]

[tool.meson-python]
limited-api = true

[tool.cibuildwheel]
skip = [
    # Skip these platforms because conda-forge does not support them, and we
    # are using conda to install our external shared library dependencies.
    "*i686*", "*musl*",
    # Skip these platforms because I haven't worked out the compiler config.
    "*win32",
    # Skip this platform because meson cannot find numpy-config.
    # See https://github.com/nasa-gcn/hpx/pull/12
    "pp*-win_amd64",
]
before-all = [
    "curl -L https://micro.mamba.pm/install.sh | bash",
    "bash -c '~/.local/bin/micromamba install -y --prefix ~/micromamba cgal-cpp cmake'"
]

[tool.cibuildwheel.environment]
CMAKE = "$HOME/micromamba/bin/cmake"

[tool.cibuildwheel.linux]
# Build Linux wheels for aarch64 under emulation.
archs = ["auto", "aarch64"]

[tool.cibuildwheel.windows.environment]
CMAKE = "C:\\\\Users\\\\runneradmin\\\\micromamba\\\\Library\\\\bin\\\\cmake"
